# sphinx-exec-jupyter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  biome.jsonc  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst
src/sphinx_exec_jupyter/: __init__.py  _directive.py  _myst_patch.py  _pending.py  _resolve.py  collect-urls.py  common.py  hv_mimes.py  mime_handlers.py
src/sphinx_exec_jupyter/_kernel_mgr/: __init__.py  fork-server.py  fork_server.py  myst.py  reactivate-mpl-inline.py
src/sphinx_exec_jupyter/holoviews/: __init__.py  _directive.py  _mime_render.py  collect-urls.py
src/sphinx_holoviews/: __init__.py
tests/: conftest.py  test_extension.py  test_kernel_mgr.py
