[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "sphinx-exec-jupyter"
version = "0.1.0"
description = "Execute code and let Jupyter format the output"
license = "MPL-2.0"
authors = [ { name = "Philipp A.", email = "flying-sheep@web.de" } ]
requires-python = ">=3.12"
classifiers = [
  "Framework :: Sphinx :: Extension",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "myst-nb",
  "nbformat",
  "sphinx",
]
optional-dependencies.holoviews = [ "holoviews", "sphinx-design" ]

[tool.hatch.envs.default]
installer = "uv"
features = [ "holoviews" ]
dependencies = [ "furo", "matplotlib", "plotly" ]
scripts.docs-build = "sphinx-build -M html docs docs/_build {args:-W}"
scripts.docs-clean = "rm -rf docs/_build {args}"
scripts.docs-open = "python -m webbrowser docs/_build/html/index.html {args}"

[tool.ruff]
lint.extend-select = [ "CPY", "I", "TC", "UP" ]
lint.flake8-copyright.notice-rgx = "SPDX-License-Identifier: MPL-2\\.0"
lint.flake8-type-checking.exempt-modules = [  ]
lint.flake8-type-checking.strict = true
