[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "sphinx-exec-jupyter"
description = "Execute code and let Jupyter format the output"
readme = "README.md"
license = "MPL-2.0"
authors = [ { name = "Philipp A.", email = "flying-sheep@web.de" } ]
requires-python = ">=3.12"
classifiers = [
  "Framework :: Sphinx :: Extension",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "myst-nb>=1.4",
  "nbformat>=5.10.4",
  "sphinx>=9.1",
]
optional-dependencies.holoviews = [ "holoviews", "sphinx-design" ]
urls.Documentation = "https://sphinx-exec-jupyter.readthedocs.io/"
urls.Source = "https://github.com/flying-sheep/sphinx-exec-jupyter"
entry-points."jupyter_client.kernel_provisioners".forking_provisioner = "sphinx_exec_jupyter._kernel_mgr:ForkingProvisioner"
entry-points."myst_nb.mime_renderers".holoviews = "sphinx_exec_jupyter.mime_handlers:SEJMimeRenderer"

[tool.hatch]
version.source = "vcs"
envs.default.installer = "uv"
envs.default.features = [ "holoviews" ]
envs.default.dependencies = [ "furo", "matplotlib", "plotly" ]
envs.default.scripts.docs-build = "sphinx-build -M html docs docs/_build {args:-W}"
envs.default.scripts.docs-clean = "rm -rf docs/_build {args}"
envs.default.scripts.docs-open = "python -m webbrowser docs/_build/html/index.html {args}"
envs.hatch-test.extra-dependencies = [ "anyio", "nbformat-types", "pytest-mock" ]
envs.hatch-test.matrix = [
  { python = [ "3.14", "3.12" ], feature-set = [ "full", "min" ] },
]
envs.hatch-test.overrides.matrix.feature-set.features = [ { value = "holoviews", if = [ "full" ] } ]
envs.hatch-test.default-args = []

[tool.ruff]
lint.select = [ "ALL" ]
lint.ignore = [
  "C408",   # `dict()` is fine
  "COM812", # conflict with formatter
  "D203",
  "D213",
  "N999",   # Intentional dash in scripts not used for import
  "S101",   # `assert` is fine
  "TID252", # relative imports preferred
]
lint.per-file-ignores."**/*-*" = [
  "PLC0415", # imports are not at the top for a reason
  "T201",    # `print()` used for communication
]
lint.per-file-ignores."docs/**/*" = [ "INP001" ]
lint.per-file-ignores."src/**/*" = [ "PT018" ]
lint.per-file-ignores."tests/**/*" = [ "D", "INP001" ]
lint.allowed-confusables = [ "×", "’" ]
lint.flake8-copyright.notice-rgx = "SPDX-License-Identifier: MPL-2\\.0"
lint.flake8-type-checking.exempt-modules = []
lint.flake8-type-checking.strict = true
lint.isort.required-imports = [ "from __future__ import annotations" ]

[tool.pytest]
addopts = [
  "--import-mode=importlib",
  "--doctest-modules",
  "--pyargs",
]
anyio_mode = "auto"
filterwarnings = [ "error" ]
norecursedirs = [ "src/sphinx_exec_jupyter/holoviews" ]  # doctests can’t import it
strict = true

[tool.coverage]
run.patch = [ "subprocess" ]
run.source = [ "." ]
